<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/n1"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/num2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/n2"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="calculaSoma"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="calculaSub"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="calculaDiv"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/btnMulti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="calculaMult"
            android:text="@string/btn4" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <TextView
            android:id="@+id/er"
            android:layout_width="match_parent"
            android:layout_height="34dp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>